--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "pinch-zoom-js": "^2.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
+    "react-svg-connector": "^1.0.9",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "sass": "^1.85.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
